force-app/main/default/objects/Swap_Request__c/Swap_Request__c.object-meta.xml
<CustomObject>
    <label>Swap Request</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swap Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>