force-app/main/default/objects/Swap_Request__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>Listing</label>
    <referenceTo>Swap_Listing__c</referenceTo>
    <relationshipLabel>Swap Requests</relationshipLabel>
    <relationshipName>Swap_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>