force-app/main/default/objects/Swap_Request__c/fields/Offered_Item__c.field-meta.xml
<CustomField>
    <fullName>Offered_Item__c</fullName>
    <label>Offered Item</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>