force-app/main/default/objects/Swap_Request__c/fields/Requester_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requester_Contact__c</fullName>
    <label>Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Swap Requests Sent</relationshipLabel>
    <relationshipName>Swap_Requests_Sent</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>